--- a/main/nsbots.ini
+++ b/main/nsbots.ini
@@ -14,6 +14,9 @@ MaxAIMatchTime=90
 # 2 = When the round has started (after countdown)
 BotFillTiming=1
 
+# Chance the AI commander will try to relocate to an empty hive at match start
+# Value is a decimal between 0.0 and 1.0, with 0 being never and 1 being always
+RelocationChance=0.1
 
 ### Skill Settings ###
 
