Bot reload improvements and nav mesh updates

--- a/main/nsbots.ini
+++ b/main/nsbots.ini
@@ -16,7 +16,8 @@ BotFillTiming=1
 
 # Chance the AI commander will try to relocate to an empty hive at match start
 # Value is a decimal between 0.0 and 1.0, with 0 being never and 1 being always
-RelocationChance=0.1
+# Note that setting relocation chance to 0.0 will also disable ANY relocation at any time
+RelocationChance=0.2
 
 ### Skill Settings ###
 
